--- a/dash board/index.html
+++ b/dash board/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css">
   
 </head>
-<body>
+
+<body background="https://images.pexels.com/photos/1933900/pexels-photo-1933900.jpeg">
   <header>
     <div class="logo">Coding Age</div>
     <img src="./Coding Age1_edited_edited.avif" alt="">
@@ -47,5 +48,5 @@
     <p>© <span id="year"></span> Coding Age | All Rights Reserved</p>
   </footer>
   <script>document.getElementById("year").textContent = new Date().getFullYear();</script>
-</body>
+</body >
 </html>
